--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@
     --btn: #0079ff;
     --btn-hover: #60abff;
   }
+
   
   * {
     margin: 0;
@@ -119,6 +120,7 @@
     letter-spacing: -0.5px;
     font-size: 13px;
   }
+
   
   .searchbar-container img {
     height: 20px;
@@ -275,6 +277,39 @@
   
   .active {
     box-shadow: var(--lm-shadow);
+  }
+
+  div.at-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+  }
+  .at-item {
+    color: #3079ed; font-weight:bold; font-size:3em;
+    
+    animation-name: focus-in-contract;
+    animation-duration: 1.2s;
+    animation-timing-function: linear;
+    animation-delay: 0s;
+    animation-iteration-count: 1;
+    animation-direction: normal;
+    animation-fill-mode: none;
+      
+    /* shorthand
+    animation: focus-in-contract 1.2s linear 0s 1 normal none;*/
+  }
+  @keyframes focus-in-contract {
+      
+    0% {
+      letter-spacing:1em;
+      filter:blur(12px);
+      opacity:0;
+    }
+    100% {
+      filter:blur(0);
+      opacity:1;
+    }
   }
   
   /* tablet */
